cleaned up code and added read from file ranking

--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Projetil.cpp" />
     <ClCompile Include="Raiva.cpp" />
     <ClCompile Include="Segunda_Fase.cpp" />
+    <ClCompile Include="TextBox.cpp" />
     <ClCompile Include="Texto.cpp" />
     <ClCompile Include="Tristeza.cpp" />
     <ClCompile Include="Vinganca.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="Projetil.h" />
     <ClInclude Include="Raiva.h" />
     <ClInclude Include="Segunda_Fase.h" />
+    <ClInclude Include="TextBox.h" />
     <ClInclude Include="Texto.h" />
     <ClInclude Include="Tristeza.h" />
     <ClInclude Include="Vector2D.h" />
